--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -7,4 +7,4 @@
         li: a(href='#') Become a guide
         li: a(href='#') Careers
         li: a(href='#') Contacts
-    p.footer__copyright &copy; by Jonas Schmedtmann. All rights reserved.
+    p.footer__copyright &copy; by Khush Vachhani. All rights reserved.
