--- a/views/base.pug
+++ b/views/base.pug
@@ -9,6 +9,8 @@ html
             link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css' rel='stylesheet')
             link(rel="stylesheet" href="/css/style.css")
             link(rel='shortcut icon' type='/image/png' href='/img/favicon.png')
+            link(href="https://api.mapbox.com/mapbox-gl-js/v3.11.0/mapbox-gl.css" rel="stylesheet")
+            script(src="https://api.mapbox.com/mapbox-gl-js/v3.11.0/mapbox-gl.js")
 
     body
         //Header
